<resources>
    <string name="app_name">Passcrypt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_your_master_password">Set up your Master Password</string>
    <string name="note">Note</string>
    <string name="content_desc_warning_icon">warning_icon</string>
    <string name="master_pass_instruction">The master password you give will be used to decrypt the database where your other passwords are stored. This means if you forget the master password you cannot able to access your other passwords</string>
    <string name="enter_your_master_password">Enter your Master Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="set_master_password">Set Master Password</string>
    <string name="enter_your_password_here">Enter your password here</string>
    <string name="unlock">Unlock</string>
    <string name="store_new_password">New Password</string>
    <string name="enter_site_name_url">Enter Site Name or URL</string>
    <string name="enter_username_or_email">Enter Username or Email</string>
    <string name="enter_password">Enter password</string>
    <string name="content_desc_check_icon">Check Icon</string>
    <string name="comments">Comments</string>
    <string name="content_desc_add">Add</string>
    <string name="content_desc_add_account">Add Account</string>
    <string name="content_desc_add_bank">Add Bank</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="customer_id">Customer ID</string>
    <string name="card_number">Card Number</string>
    <string name="card_number_hint">XXXX</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="expiry_hint">MM/YY</string>
    <string name="cvv_hint">CVV</string>
    <string name="card_details">Card Details</string>
    <string name="bank_details">Bank Details</string>
    <string name="hint_pin">PIN</string>
    <string name="content_desc_credit_card">Credit Card</string>
    <string name="content_desc_copy_password">Copy</string>
    <string name="content_desc_cred_type">Type of Credential</string>
    <string name="menu_option_settings">Settings</string>
    <string name="remaining_number_of_attempts">%1s Remaining Attempt(s)</string>
    <string name="self_destruction_warning">Self Destruction Enabled - The data will be lost in case of unsuccessful attempts.</string>
    <string name="limit_crossed_text">You have crossed the number of limits. You cannot recover your data. Set a new Master password to proceed.</string>
    <string name="set_new_master_password">Set new master password</string>
    <string name="created_on">Created on %1s</string>
    <string name="label_user_name">User Name</string>
    <string name="label_password">Password</string>
    <string name="label_comments">Comments</string>
    <string name="label_website">Website</string>
    <string name="last_updated_on">Last Updated On %1s</string>
    <string name="title">Title</string>
    <string name="valid_thru">VALID THRU</string>
    <string name="content_desc_copy_ifsc_code">copy IFSC Code</string>
    <string name="content_desc_copy_customer_id">Copy Customer ID</string>
    <string name="content_desc_copy_account_number">Copy Account Number</string>
    <string name="content_desc_copy_bank_name">Copy Bank Name</string>
    <string name="edit">Edit</string>
    <string name="content_desc_make_favorite">Make Favorite</string>
    <string name="content_desc_view_cred">View Cred</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="content_desc_refresh">refresh</string>
    <string name="password_length">Password Length: %1s</string>
    <string name="character_set">Character Set</string>
    <string name="capital_a_z">A - Z</string>
    <string name="small_a_z">a - z</string>
    <string name="_0_9">0 - 9</string>
    <string name="special_characters">#!@…</string>
    <string name="menu_option_password_generator">Generate Passwords</string>
    <string name="password_generator_warning">No Character set found!</string>
    <string name="no_duplicates">No duplicates</string>
    <string name="self_destruction">Self Destruction</string>
    <string name="general">General</string>
    <string name="self_destruction_description">When you enter a wrong master password a certain number of times , stored credentials will be deleted and cannot be recovered.</string>
    <string name="number_of_attempts">Maximum Number of attempts - %1s</string>
    <string name="change_master_password">Change Master Password</string>
    <string name="links">Links</string>
    <string name="rate_passcrypt">Rate Passcrypt</string>
    <string name="share_text_label">Recommend Passcrypt to your friends</string>
    <string name="contact_support">Contact Support</string>
    <string name="report_a_bug_or_ask_a_feature">Report a Bug or request a Feature</string>
    <string name="our_other_products">Our Other Apps</string>
    <string name="content_desc_info_circle">Info Circle</string>

    <string name="share_text">Hey Guys! I\'m using Passcrypt for managing my account credentials.This
        is a useful app for storing your account credentials safely. Download it from Play Store.
        https://play.google.com/store/apps/details?id=com.geekydroid.passcrypt</string>

    <string name="passcrypt_version">Current Version v1.0.0</string>
    <string name="enter_you_old_master_password">Enter you current Master Password</string>
    <string name="content_desc_proceed">Proceed</string>
    <string name="save">Save</string>
    <string name="master_password_description">Master Password is used to access all other details within the application.</string>
    <string name="verify">Verify</string>
    <string name="sort">Sort</string>
    <string name="sort_from_a_z">Sort from A-Z</string>
    <string name="sort_from_z_a">Sort from Z-A</string>
    <string name="newest_to_oldest">Newest to Oldest</string>
    <string name="oldest_to_newest">Oldest to Newest</string>
    <string name="content_desc_edit">Edit</string>
    <string name="content_desc_show">Show</string>
    <string name="maximum_login_attempts">Maximum Login attempts</string>
    <string name="self_destruction_attempts_hint">Enter the maximum attempts</string>
    <string name="set_maximum_failed_login_attempts">Set Maximum Failed Login Attempts</string>
    <string name="update">Update</string>
    <string name="export_data_to_xslx">Export Data to Excel</string>
    <string name="export_data_to_excel_instruction">The exported file is password protected.Use your latest Master password to see the data.</string>

</resources>