<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"
        android:title="@string/menu_option_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort"
        android:icon="@drawable/filter"
        android:title="@string/sort"
        app:showAsAction="ifRoom">

        <menu>
            <group
                android:id="@+id/sort_group"
                android:menuCategory="container">
                <item
                    android:id="@+id/sort_by_name_asc"
                    android:title="@string/sort_from_a_z"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/sort_by_name_desc"
                    android:title="@string/sort_from_z_a"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/sort_by_date_asc"
                    android:title="@string/oldest_to_newest"
                    app:showAsAction="always" />
                <item
                    android:id="@+id/sort_by_date_desc"
                    android:title="@string/newest_to_oldest"
                    app:showAsAction="always" />
            </group>
        </menu>

    </item>

    <item
        android:id="@+id/password_generator"
        android:icon="@drawable/key"
        android:title="@string/menu_option_password_generator"
        app:showAsAction="never" />


    <item
        android:id="@+id/search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

</menu>